test/Dialect/LLZK/type_convert_fail.llzk
// RUN: llzk-opt %s -split-input-file -verify-diagnostics

llzk.func @string_to_index(
    %a: !llzk.string // expected-note {{prior use here}}
  ) -> index {
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!llzk.felt' vs '!llzk.string'}}
  %b = llzk.toindex %a
  return %b: index
}
// -----

llzk.func @array_to_index(
    %a: !llzk.array<2 x !llzk.felt> // expected-note {{prior use here}}
  ) -> index {
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!llzk.felt' vs '!llzk.array<2 x !llzk.felt>'}}
  %b = llzk.toindex %a
  return %b: index
}
// -----

llzk.func @index_to_index(
    %a: index // expected-note {{prior use here}}
  ) -> index {
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!llzk.felt' vs 'index'}}
  %b = llzk.toindex %a
  return %b: index
}
// -----

llzk.func @i1_to_index(
    %a: i1 // expected-note {{prior use here}}
  ) -> index {
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!llzk.felt' vs 'i1'}}
  %b = llzk.toindex %a
  return %b: index
}
// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @C1 {
    func @compute() -> !llzk.struct<@C1> {
      %self = new_struct : !llzk.struct<@C1>
      return %self : !llzk.struct<@C1>
    }
    func @constrain(%self: !llzk.struct<@C1>) { return }
  }
  llzk.func @struct_to_index(
        %a: !llzk.struct<@C1> // expected-note {{prior use here}}
    ) -> index {
    // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!llzk.felt' vs '!llzk.struct<@C1>'}}
    %b = llzk.toindex %a
    return %b: index
  }
}
// -----

llzk.func @string_to_felt(%a: !llzk.string) -> !llzk.felt {
  // expected-error@+1 {{'llzk.tofelt' op operand #0 must be 1-bit signless integer or index, but got '!llzk.string'}}
  %b = llzk.tofelt %a : !llzk.string
  return %b: !llzk.felt
}
// -----

llzk.func @array_to_felt(%a: !llzk.array<7 x i1>) -> !llzk.felt {
  // expected-error@+1 {{'llzk.tofelt' op operand #0 must be 1-bit signless integer or index, but got '!llzk.array<7 x i1>'}}
  %b = llzk.tofelt %a : !llzk.array<7 x i1>
  return %b: !llzk.felt
}
// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @C2 {
    func @compute() -> !llzk.struct<@C2> {
      %self = new_struct : !llzk.struct<@C2>
      return %self : !llzk.struct<@C2>
    }
    func @constrain(%self: !llzk.struct<@C2>) { return }
  }
  llzk.func @struct_to_felt(%a: !llzk.struct<@C2>) -> !llzk.felt {
    // expected-error@+1 {{'llzk.tofelt' op operand #0 must be 1-bit signless integer or index, but got '!llzk.struct<@C2>'}}
    %b = llzk.tofelt %a : !llzk.struct<@C2>
    return %b: !llzk.felt
  }
}
// -----

llzk.func @check_type_restriction_on_pram(
    %a: i1 // expected-note {{prior use here}}
  ) -> !llzk.felt {
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: 'index' vs 'i1'}}
  %b = llzk.tofelt %a : index
  return %b: !llzk.felt
}
